@@ -135,6 +135,7 @@ Mantis ChangeLog
  * Look in environment variable MANTIS_CONFIG to find a config file to load after custom_config_inc.php (useful for vhosts)
  * Added $g_email_set_category to make Mantis set the category of the e-mail sent (via mail()/phpMailer).  This is useful in organising e-mails better using clients like Microsoft Outlook.
  * config options default_advanced_report, default_advanced_view, and default_advanced_update are now ON/OFF instead of BOTH/SIMPLE/ADVANCED (they never worked the other way anyway)
+ * Added a custom_headers config variable that included a list of headers to preprend to each outgoing HTTP response.  This can be used for P3P policy headers among other things (see issue #2649)
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
